--- a/index.html
+++ b/index.html
@@ -52,5 +52,23 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="partners">
+        <div class="partner col-5">
+          <div class="single-partner">
+            <img src="/images/brand/10ms.png" alt="" />
+          </div>
+          <div class="single-partner">
+            <img src="/images/brand/google.png" alt="" />
+          </div>
+          <div class="single-partner">
+            <img src="/images/brand/Asana-团队协作应用.png" alt="" />
+          </div>
+          <div class="single-partner">
+            <img src="/images/brand/microsoft.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
