added more section

--- a/index.html
+++ b/index.html
@@ -166,6 +166,38 @@
           </div>
         </div>
       </section>
+      <!-- feature section end -->
+      <section id="category">
+        <div class="category-container container">
+          <div class="single-category c-1">
+            <div class="category-img">
+              <img src="/images/category/video.png" alt="" />
+            </div>
+            <div>
+              <h4>29,560+</h4>
+              <p>Video Lecture</p>
+            </div>
+          </div>
+          <div class="single-category c-2">
+            <div class="category-img">
+              <img src="/images/category/ques.png" alt="" />
+            </div>
+            <div>
+              <h4>81,315+</h4>
+              <p>Interactive Quiz</p>
+            </div>
+          </div>
+          <div class="single-category c-3">
+            <div class="category-img">
+              <img src="/images/category/book.png" alt="" />
+            </div>
+            <div>
+              <h4>25,00+</h4>
+              <p>Guide Book</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
