--- a/index.html
+++ b/index.html
@@ -285,6 +285,12 @@
             </div>
           </div>
         </div>
+        <div class="copyright container">
+          <hr />
+          <p>
+            Copyright © All Reserved by Educafe, 2022
+          </p>
+        </div>
       </footer>
     </div>
   </body>
