--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         </div>
         <div class="copyright container">
           <hr />
-          <p>Copyright © All Reserved by Dipto Das, 2022</p>
+          <p>Copyright © All Reserved by Educafe, 2022</p>
           <p>Made By <i class="fas fa-heart"></i> Dipto Das</p>
         </div>
       </footer>
